# voice-flow

./: .gitignore  README.md  entitlements.plist  forge.config.js  index.html  main.html  package-lock.json  package.json  tsconfig.json  vite.app.config.ts  vite.main.config.ts  vite.overlay.config.ts  vite.preload.config.ts
.github/workflows/: release-macos.yml
assets/: icon.icns
eval-data/: README.md
landing/: package-lock.json  package.json
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/: AppWindow.tsx  Choices.tsx  Demo.tsx  Diff.tsx  EditorialMast.tsx  Everywhere.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Magnetic.tsx  Nav.tsx  OverlayMockup.tsx  ScrollProgress.tsx  SpotlightCard.tsx  Waveform.tsx
landing/src/lib/: cn.ts  dictation-script.ts  download.ts
native/global-key-listener/: Cargo.toml
native/global-key-listener/src/: main.rs
scripts/: build-native-key-listener.mjs  eval-stt-doctor.mjs  eval-stt.mjs  package-make-install.sh
src/: index.css  main.ts  overlay.ts  preload.ts
src/app/: App.tsx  index.css
src/main/: ai-service.ts  ask-service.ts  assets-path.ts  config-store.ts  context-capture.ts  dictionary-service.ts  history-service.ts  ipc-handlers.ts  local-history-service.ts  main-window.ts  native-binary-path.ts  overlay-window.ts  realtime-session-manager.ts  realtime-transcription-service.ts  service-ipc.ts  shortcut-manager.ts  text-injector.ts  transcription-service.ts  tray-manager.ts
src/shared/: app-defaults.ts  constants.ts  hotkeys.ts  types.ts
(+34 files in other folders)
